--- a/day-14/simple-python-app/buildspec.yml
+++ b/day-14/simple-python-app/buildspec.yml
@@ -5,34 +5,26 @@ env:
     DOCKER_REGISTRY_USERNAME: /myapp/docker-credentials/username
     DOCKER_REGISTRY_PASSWORD: /myapp/docker-credentials/password
     DOCKER_REGISTRY_URL: /myapp/docker-registry/url
-
 phases:
   install:
     runtime-versions:
       python: 3.11
-
   pre_build:
     commands:
       - echo "Installing dependencies..."
-      - pip install -r day-14/simple-python-app/requirements.txt
-
+      - pip install -r day-13/simple-python-app/requirements.txt
   build:
     commands:
-      - echo "Logging in to Docker registry..."
-      - cd day-14/simple-python-app
-      - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USERNAME" --password-stdin "$DOCKER_REGISTRY_URL"
+      - echo "Running tests..."
+      - cd day-13/simple-python-app/
       - echo "Building Docker image..."
+      - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USERNAME" --password-stdin "$DOCKER_REGISTRY_URL"
       - docker build -t "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/simple-python-flask-app:latest" .
-      - echo "Pushing Docker image..."
       - docker push "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/simple-python-flask-app:latest"
-
   post_build:
     commands:
-      - echo "Build and Docker push completed successfully."
-
+      - echo "Build completed successfully!"
 artifacts:
   files:
-    - appspec.yml
-    - scripts/**
     - '**/*'
-  base-directory: day-14/simple-python-app
+  base-directory: ../simple-python-app
